--- a/widgets/backgroundTask/assets/css/backgroundTask.css
+++ b/widgets/backgroundTask/assets/css/backgroundTask.css
@@ -34,3 +34,30 @@
     max-height: 100px;
 
 }
+.modal-background {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(10,10,10,0.5);
+    /* text-align: center;*/
+    overflow-x: auto;
+    overflow-y: scroll;
+    /*   padding: 20px;*/
+    z-index: 100;
+}
+
+.info-block-modal {
+    display: none;
+    position: relative;
+    z-index: 9999;
+    background-color: lightyellow;
+    padding: 10px;
+    margin: 10px;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+
+    overflow: auto;
+}
+
