--- a/assets/css/backgroundTask.css
+++ b/assets/css/backgroundTask.css
@@ -60,3 +60,26 @@
 
     overflow: auto;
 }
+
+.background-wrapper-popup{
+    position: relative;
+    left: 10%;
+    top: 20%;
+    width: 25%;
+    min-height: 100px;
+    height: auto;
+    background-color: green;
+    padding: 10px;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+    margin: 1px;
+    overflow: auto;
+}
+.background-area-popup{
+    width: 100%;
+    height: auto;
+    background-color: lightyellow;
+    padding: 10px;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+    margin: 1px;
+    overflow: auto;
+}
