--- a/widgets/selectMultiXle/assets/css/selectMultiXle.css
+++ b/widgets/selectMultiXle/assets/css/selectMultiXle.css
@@ -10,16 +10,23 @@
 }
 
 .multi-selct-block {
-    float: left;
     display: block;
-    width: 150px;
-    border: 1px solid blue;
+    border: 1px solid black;
     margin: 2px;
     background-color: white;
+    padding: 5px;
 }
 .no-active{
     display: none;
 }
 .active{
     display: block;
+}
+.selected-items{
+    max-height: 60px;
+    overflow: auto;
+}
+.choise-items{
+    max-height: 100px;
+    overflow: auto;
 }
